fixed modal alignment issues

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -67,10 +67,10 @@ $default-float: left;
 
 // Colors
 
-$primary-color: #000000;
-// $secondary-color: #ECD078;
-$alert-color: #C02942;
-$success-color: #ffffff;
+// $primary-color: #2ba6cb;
+// $secondary-color: #e9e9e9;
+// $alert-color: #c60f13;
+// $success-color: #5da423;
 
 // Make sure border radius matches unless we want it different.
 
@@ -1234,7 +1234,7 @@ $panel-padding: emCalc(20);
 
 // Background color for the top bar
 
-$topbar-bg: #ffffff;
+// $topbar-bg: #111;
 
 // Height and margin
 
