--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -63,7 +63,7 @@ img {
   width: 605px;
   height: 500px;
   background-color: blue;
-  margin-left: -20%;
+  margin-left: -21%;
 }
 
 .hobby {
